--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "13.5.3",
+    "@react-pdf/renderer": "^3.1.13",
     "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
@@ -22,11 +23,15 @@
     "image-size": "1.0.0",
     "next": "13.5.3",
     "next-contentlayer": "0.3.4",
+    "next-i18next": "^14.0.3",
     "next-themes": "^0.2.1",
+    "pdfjs-dist": "3.4.120",
     "pliny": "0.1.4",
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-pdf": "^7.5.1",
+    "react-pdf-viewer": "^0.1.0",
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "^6.1.0",
     "rehype-citation": "^1.0.2",
