--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-pdf/renderer": "^3.1.13",
     "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
+    "@vercel/analytics": "^1.1.1",
     "autoprefixer": "^10.4.13",
     "contentlayer": "0.3.4",
     "esbuild": "0.18.11",
